Convert to JDK 23