@@ -17,8 +17,11 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'mpinard'
 version = '0.1.0-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_18
-targetCompatibility = JavaVersion.VERSION_18
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_23
+    targetCompatibility = JavaVersion.VERSION_23
+}
 
 configurations {
     compile.exclude module: "slf4j-log4j12"
@@ -44,17 +47,20 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
     testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
-    testImplementation("org.junit.platform:junit-platform-engine:${junitPlatformVersion}")
-    testImplementation("org.junit.platform:junit-platform-commons:${junitPlatformVersion}")
-    testImplementation("org.junit.platform:junit-platform-runner:${junitPlatformVersion}")
-    testImplementation("org.junit.platform:junit-platform-suite:${junitPlatformVersion}")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+}
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '--enable-preview'
+}
 
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+}
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
